@@ -5,7 +5,6 @@ import ru.mrchebik.command.CommandType;
 import ru.mrchebik.process.io.ErrorProcess;
 import ru.mrchebik.process.io.ExecutorCommand;
 import ru.mrchebik.project.Project;
-import ru.mrchebik.task.Task;
 import ru.mrchebik.task.TaskHelper;
 
 import java.nio.file.Path;
@@ -22,8 +21,8 @@ public class Build extends BuildModel implements BuildWrapper {
     }
 
     public void run(Path path) {
-        Task compile = TaskHelper.makeTask(CommandType.COMPILE);
-        Task run = TaskHelper.makeTask(CommandType.RUN);
+        var compile = TaskHelper.makeTask(CommandType.COMPILE);
+        var run = TaskHelper.makeTask(CommandType.RUN);
 
         TaskHelper.chain(compile, run);
     }
