@@ -1,4 +1,0 @@
-package ru.mrchebik.gui.place;
-
-public class PlaceHelper {
-}
