@@ -1,48 +1,32 @@
 package ru.mrchebik.gui.place.create.file;
 
-import javafx.scene.Scene;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import lombok.Getter;
 import lombok.Setter;
-import ru.mrchebik.icons.Icons;
-import ru.mrchebik.screen.Screen;
-import ru.mrchebik.screen.measurement.Point;
+import ru.mrchebik.gui.place.StageHelper;
+import ru.mrchebik.screen.measurement.Scale;
 
 import java.nio.file.Path;
 
-public class CreateFilePlace {
+public class CreateFilePlace extends StageHelper {
     @Getter @Setter
     private Path path;
-
-    private Stage stage;
 
     public static CreateFilePlace create() {
         return new CreateFilePlace();
     }
 
     public void start() {
-        stage = new Stage();
-        stage.initModality(Modality.APPLICATION_MODAL);
-        stage.setTitle("Create File");
-        stage.setWidth(400);
-        stage.setHeight(150);
-        stage.setResizable(false);
+        super.childStage = new Stage();
 
-        Screen screen = new Screen();
-        Point point = screen.calculateCenter(400, 150);
-        stage.setX(point.getX());
-        stage.setY(point.getY());
+        var scale = new Scale(400, 150);
+        var view = new CreateFileView();
 
-        stage.getIcons().add(Icons.LOGO.get());
-
-        CreateFileView createFileView = new CreateFileView();
-        Scene scene = new Scene(createFileView.getView());
-        stage.setScene(scene);
-        stage.show();
-    }
-
-    public void close() {
-        stage.close();
+        StageHelper.initWindow(super.childStage,
+                "Create File",
+                Modality.APPLICATION_MODAL,
+                scale,
+                view.getView());
     }
 }
