@@ -17,7 +17,7 @@
     </center>
     <bottom>
         <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
-            <Button fx:id="createProject" mnemonicParsing="false" onMouseClicked="#handleNewProject" text="New Project" />
+            <Button fx:id="createProject" mnemonicParsing="false" onMouseClicked="#handleNewProject" onKeyReleased="#handleNewProjectWithKey" text="New Project" />
         </HBox>
     </bottom>
     <top>
