@@ -5,8 +5,8 @@ import javafx.scene.control.TreeView;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import ru.mrchebik.gui.node.codearea.CustomCodeArea;
-import ru.mrchebik.language.java.highlight.syntax.switcher.javaCompiler.JavaCompilerSyntax;
-import ru.mrchebik.language.java.highlight.syntax.switcher.javaSymbolSolver.JavaSymbolSolverSyntax;
+import ru.mrchebik.language.java.highlight.syntax.switcher.compiler.JavaCompilerSyntax;
+import ru.mrchebik.language.java.highlight.syntax.switcher.symbolsolver.JavaSymbolSolverSyntax;
 import ru.mrchebik.process.save.SaveTabsProcess;
 import ru.mrchebik.project.Project;
 import ru.mrchebik.settings.PropertyCollector;
