@@ -1,4 +1,4 @@
-package ru.mrchebik.language.java.highlight.syntax.switcher.javaCompiler.cell;
+package ru.mrchebik.language.java.highlight.syntax.switcher.compiler.cell;
 
 import javafx.scene.Node;
 import javafx.scene.control.TabPane;
@@ -6,7 +6,7 @@ import javafx.scene.control.TreeCell;
 import javafx.scene.control.TreeItem;
 import javafx.scene.control.TreeView;
 import ru.mrchebik.gui.node.codearea.CustomCodeArea;
-import ru.mrchebik.language.java.highlight.syntax.switcher.javaCompiler.JavaCompilerSyntax;
+import ru.mrchebik.language.java.highlight.syntax.switcher.compiler.JavaCompilerSyntax;
 import ru.mrchebik.process.save.SaveTabsProcess;
 import ru.mrchebik.project.Project;
 
