@@ -1,9 +1,9 @@
-package ru.mrchebik.language.java.highlight.syntax.switcher.javaCompiler.tab;
+package ru.mrchebik.language.java.highlight.syntax.switcher.compiler.tab;
 
 import javafx.scene.control.TabPane;
 import javafx.scene.control.TreeView;
 import ru.mrchebik.gui.node.codearea.CustomCodeArea;
-import ru.mrchebik.language.java.highlight.syntax.switcher.javaCompiler.JavaCompilerSyntax;
+import ru.mrchebik.language.java.highlight.syntax.switcher.compiler.JavaCompilerSyntax;
 import ru.mrchebik.process.save.SaveTabsProcess;
 import ru.mrchebik.project.Project;
 
