@@ -1,11 +1,14 @@
 === v0.3.0 - master
 * Required Java 10.
 * Updated API.
+* Fixed window title `Rename Folder`.
 CodeArea:
     + Auto adding `\` to `"""` combination, the same with `'`.
     + Remove same / mirror symbols with their pair.
     + The possibility of closing a paired symbol without moving the arrow.
     * Fixed removing selected area after Enter/Backspace/Semicolon.
+Highlight:
+    + `var` keyword.
 
 === v0.2.3
 Autocomplete:
